# svg-cpp-plot

./: CMakeLists.txt  README.md  svg-cpp-plot.h
2d/: bar-plot.h  curve.h  function-2d.h  function-image.h  function.h  ignore-scale.h  point-list.h  points.h  polygon.h  polyline.h  primitive.h  text.h  transform.h
3d/: graph-3d.h  plot-curve-3d.h  point-3d.h  project.h  transform.h
attributes/: aspect-ratio-attributes.h  attribute-list.h  attributes.h  color.h  geometry-attributes.h  graphical-attributes.h  presentation-attributes.h  style-attributes.h  style.h  text-presentation-attributes.h  units.h  url.h
core/: attributes.h  bounding-box.h  circle.h  color.h  element-generator.h  element.h  external.h  generator.h  group-z-ordered.h  group.h  line.h  node-generator.h  node.h  object-list.h  object-map.h  object.h  path.h  point.h  poly.h  presentation-attributes.h  script.h  style-attributes.h  style.h  svg.h  text-presentation-attributes.h  text.h
doc/: svgplot.md
doc/svgplot/: bar.md  hist.md  imshow.md  plot.md  scatter.md  subplot.md  teaser
html/: graphs.css  viewall.html
interactive/: slideshow.h
main/doc/circle/: circle.cc
main/doc/clip-path/: clip-path.cc
main/doc/function-image/: function-image.cc
main/doc/graph-2d/: graph-2d.cc
main/doc/graph-2d-old/: graph-2d-old.cc
main/doc/graph-3d/: graph-3d.cc
main/doc/image/: image.cc
main/doc/line/: line.cc
main/doc/linear-gradient/: linear-gradient.cc
main/doc/mask/: mask.cc
main/doc/path/: path.cc
main/doc/plot-3d/: plot-3d.cc
main/doc/plot-curve/: plot-curve.cc
main/doc/plot-function/: plot-function.cc
main/doc/poly/: poly.cc
main/doc/primitives2d/: primitives2d.cc
main/doc/rect/: rect.cc
main/doc/style/: style.cc
main/doc/svgplot/: svgplot.cc
main/doc/svgplot-bar/: svgplot-bar.cc
main/doc/svgplot-hist/: svgplot-hist.cc
main/doc/svgplot-imshow/: svgplot-imshow.cc
main/doc/svgplot-plot/: svgplot-plot.cc
main/doc/svgplot-scale/: svgplot-scale.cc
main/doc/svgplot-scatter/: svgplot-scatter.cc
main/doc/svgplot-subplot/: svgplot-subplot.cc
main/doc/text/: text.cc
main/doc/transform/: transform.cc
main/doc/zorder/: zorder.cc
main/examples/nicest-fruit/: nicest-fruit.cc
main/examples/wave/: wave.cc
main/old/graph-3d/: graph-3d.cc
main/old/plot-3d/: plot-3d.cc
main/old/plot-curve/: plot-curve.cc
main/old/plot-function/: plot-function.cc
main/old/wave/: wave.cc
main/test/slideshow/: slideshow.cc
main/test/watch/: watch.cc
plot/: function.h  graph-2d.h  graph-3d.h  graph-style.h  plot-curve-3d.h  plot-curve.h  plot-function.h  point-3d.h  svgplot.h  transform.h
plot/old/: graph-2d-old.h  graph-2d.h  graph-style.h  plot-curve.h  plot-function.h  plot-points.h
plot/svgplot/: arange.h  axis-scale.h  bar.h  barh.h  cmap.h  color.h  exceptions.h  hist.h  imshow.h  linspace.h  plot.h  plottable.h  scatter.h
primitives/: circle.h  clip-path.h  defs.h  external.h  group-z-ordered.h  group.h  image.h  line.h  linear-gradient.h  mask.h  path.h  poly.h  rect.h  svg.h  text.h
scripts/: for-all.h  reload.h  script.h  self-reload.h  set-interval.h  set-timeout.h  slides.h  window-reload.h
slides/: slide.h
svg-tests/: slides.css  svg-test-non-scaling-strokes-optimizado.ps  svg-test-non-scaling-strokes.tex
utils/: base64.h  browse.h  png.h  watch.h
